2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* lib/dbmodify.c (status_pipes): Move definitions to ...
	* lib/log.c: ... here.
	* lib/dpkg-db.h (struct pipef, status_pipes): Move declarations to ...
	* lib/dpkg.h: ... here.
	(statusfd_send): New function protoype.
	* lib/log.c: Include <assert.h> and <unistd.h>.
	(statusfd_send): New function.
	* lib/dbmodify.c: Use statusfd_send instead of duplicate code.
	* src/configure.c: Likewise.
	* src/errors.c: Likewise.

2008-03-25  Guillem Jover  <guillem@debian.org>

	* lib/dbmodify.c (log_file, log_message): Move to ...
	* lib/log.c: ... here. New file.
	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'log.c'.
	* lib/dpkg-db.h (log_file, log_message): Move declaration to ...
	* lib/dpkg.h: ... here.

2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
            Guillem Jover  <guillem@debian.org>

	* src/packages.c (struct pkginqueue): Move declaration to ...
	* src/main.h: ... here.
	(queuelen): Remove extern declaration.
	(struct pkgqueue): New declaration.
	(PKGQUEUE_DEF_INIT): New macro.
	(add_to_some_queue): New function prototype.
	(remove_from_some_queue): Likewise.
	* src/packages.c (queuehead, queuetail, queuelen): Replace with ...
	(queue): ... this. New variable. Fix all users.
	(add_to_queue): Refactor into ...
	(add_to_some_queue): ... this. Take a struct pkgqueue argument.
	(process_queue): Assert that the queue is empty at the end of the
	function. Refactor queue entry removal into ...
	(remove_from_some_queue): ... this. New function.
	(add_to_queue): New function.

2008-03-25  Guillem Jover  <guillem@debian.org>

	* src/main.h (ensure_package_clientdata): Move prototype to ...
	* src/filesdb.h: ... here.
	* src/help.c (ensure_package_clientdata): Move function to ...
	* src/filesdb.c: ... here.
	* src/query.c: Remove duplicate function.

2008-03-25  Guillem Jover  <guillem@debian.org>
