@@ -36,6 +36,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Move test suite invokation to a new check target in debian/rules.
   * Add support for nocheck DEB_BUILD_OPTIONS in debian/rules, so that the
     dpkg test suite can be skept if desired.
+  * Improve log and status-fd output by printing more status change updates
+    and actions. Thanks to Ian Jackson.
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
