@@ -1,3 +1,7 @@
+2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* dpkg.1: Document improved status-fd output.
+
 2008-03-14  Guillem Jover  <guillem@debian.org>
 
 	Fix errors spotted by Helge Kreutzmann.
