@@ -1,3 +1,12 @@
+2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* src/archives.c (archivefiles): Call log_message.
+	* src/configure.c (deferred_configure): Likewise.
+	* src/packages.c (packages): Likewise.
+	* src/processarc.c (process_archive): Call log_action after printing
+	the action to perform to stdout.
+	* src/help.c (log_action): Call statusfd_send.
+
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>,
             Guillem Jover  <guillem@debian.org>
 
